--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.16",
+    "bcryptjs": "^2.4.3",
     "mongoose": "^8.3.2",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "resend": "^3.2.0",
     "zod": "^3.23.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
